# compare-consensus-protocols

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: notes.md
report/: README.md  biblio.bib  biblio.tex  cover.tex  glossaries.tex  main.tex  title.tex
src/: README.md  main.rs
src/blockchain/: Block.rs  Transaction.rs  block.rs  mod.rs  transaction.rs
src/node/: mod.rs
